Trying to build executable